<resources>
    <string name="app_name">RSO</string>
    <string name="loginPageRegister">Register</string>
    <string name="loginPageLogin">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="fill_in_name_hint">First Name</string>
    <string name="fill_in_email_hint">Email</string>
    <string name="fill_in_password_hint">Password</string>
    <string name="sign_up_prompt">Don\'t have an account? Sign up here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="Bulletin_board">Bulletin Board</string>
    <string name="Send">Send</string>
    <string name="Join_den_prompt">Want to join an existing household?\nGo ahead and enter the household\'s street address</string>
    <string name="Create_den_instructions">Go ahead and enter your\nnew household\'s name and address to create it</string>
    <string name="den_name_example">The Nuclear Tiger\'s Den</string>
    <string name="address_example">123 Nuclear Tiger Dr.</string>
    <string name="Address">Address</string>
    <string name="Create_den">Start a Household</string>
    <string name="Join_den">Join Household</string>
    <string name="Sign_out">Sign Out</string>
    <string name="Create_den_prompt">Want to create a Household instead? Tap here</string>
    <string name="Den_name">Household\n Name</string>
    <string name="Calendar">Calendar</string>
    <string name="To_Do_List">To-do List</string>
    <string name="reg_instructions">Create an account by entering your first and last name, \nand your account\'s email and password</string>
    <string name="Post">Post</string>
    <string name="Enter_Message">Enter message...</string>
    <string name="Sign_up">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="lastname">Last Name</string>
    <string name="make_post">Delete Post</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
